Test: 서버 로직 변경으로 인한 테스트 코드 재구현